# myengine

./: CMakeLists.txt  Doxyfile  readme.txt
contrib/msvc-windows-x86/SDL2_ttf/include/SDL2/: SDL_ttf.h
resources/shaders/: FragShader.txt  depthVertShader.txt
src/game/: Ability.cpp  Ability.h  ActionBar.cpp  ActionBar.h  BattleBackground.cpp  BattleBackground.h  BattleScene.cpp  BattleScene.h  BloomEffect.cpp  BloomEffect.h  BlurEffect.cpp  BlurEffect.h  BossScene.cpp  BossScene.h  Character.cpp  Character.h  CollisionChecker.cpp  CollisionChecker.h  DeathScene.cpp  DeathScene.h  Enemy.cpp  Enemy.h  GameOver.cpp  GameOver.h  Stats.cpp  Stats.h  TestScene.cpp  TestScene.h  TitleButtons.cpp  TitleButtons.h  TitleScene.cpp  TitleScene.h  TurnBar.cpp  TurnBar.h  main.cpp
src/myengine/: Camera.cpp  Camera.h  Collider.cpp  Collider.h  Collisions.cpp  Collisions.h  Component.cpp  Component.h  Compositor.cpp  Compositor.h  Core.cpp  Core.h  DepthBuffer.cpp  DepthBuffer.h  Entity.cpp  Entity.h  Environment.cpp  Environment.h  FrameBuffer.cpp  FrameBuffer.h  Gui.cpp  Gui.h  Keyboard.cpp  Keyboard.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  MeshRenderer.cpp  MeshRenderer.h  MyEngineException.h  PostProcess.cpp  PostProcess.h  Resource.h  Resources.cpp  Resources.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  (+18 more)
src/resources/: FragShader.txt  SpriteFrag.txt  SpriteVert.txt  VertShader.txt  blurFrag.txt  compFrag.txt  compVert.txt  depthFragShader.txt  depthVertShader.txt  guiFrag.txt  guiVert.txt  simplefrag.txt  simplevert.txt
src/resources/assets/: Cube_Colors.psd  bar.psd  ele.psd
src/resources/assets/characters/: ophilia_0_0.psd  turn.psd
src/resources/shaders/: FragShader.txt  guiFrag.txt  guiVert.txt
